--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,400i,500');
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  font-family: Helvetica, Arial, sans-serif;
+  width: 100%;
+  height: 100%;
+  padding: 10px 0px;
+  background-image: linear-gradient(#6689bb, #cbd5eb);
+  box-shadow: inset 0 0 100px hsla(0, 0%, 0%, .3);
 }
 
 ul {
@@ -12,8 +22,7 @@ ul {
 }
 
 .image {
-  width: 300px;
-  margin: 0 10px;
+  width: 100%;
 }
 
 .header {
@@ -28,11 +37,13 @@ ul {
 }
 
 .card {
+  display: block;
+  margin: auto auto;
   border-radius: 10px;
-  width: 320px;
+  width: 300px;
   background-color: #ddd;
   transition: all 200ms ease-out;
-  margin: 20px auto;
+  font-family: Roboto, Helvetica, Arial, sans-serif;
 }
 
 .card:hover {
@@ -44,8 +55,9 @@ ul {
   margin: 10px 10px;
   border-width: thin;
   padding: 0px 10px;
+  font-size: 14px;
 }
 
-#interesting-fact {
+.interesting-fact {
   font-style: italic;
 }
