--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,400i,500');
-html, body {
+html {
   margin: 0;
   padding: 0;
 }
@@ -7,9 +7,27 @@ html, body {
 body {
   width: 100%;
   height: 100%;
+  margin: 0;
   padding: 10px 0px;
-  background-image: linear-gradient(#6689bb, #cbd5eb);
-  box-shadow: inset 0 0 100px hsla(0, 0%, 0%, .3);
+  background-image: linear-gradient(#80bb70, #aaeeaa);
+  box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.3);
+}
+
+.card {
+  display: block;
+  margin: auto auto;
+  padding: 0 0 10px 0;
+  border-radius: 10px;
+  width: 300px;
+  background-color: #ccffcc;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  transition: all 200ms ease-out;
+  font-family: Roboto, Helvetica, Arial, sans-serif;
+  overflow: hidden;
+}
+
+.card:hover {
+  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
 }
 
 ul {
@@ -21,43 +39,28 @@ ul {
   font-weight: bold;
 }
 
+.header {
+  position: absolute;
+  margin: 10px auto;
+  text-align: center;
+  width: 300px;
+  text-transform: uppercase;
+  color: white;
+}
+
 .image {
   width: 100%;
 }
 
-.header {
-  margin-left: 10px;
-  text-transform: uppercase;
-}
-
-.border {
-  border-style: solid;
-  border-width: thin;
-  border-color: grey;
-}
-
-.card {
-  display: block;
-  margin: auto auto;
-  border-radius: 10px;
-  width: 300px;
-  background-color: #ddd;
-  transition: all 200ms ease-out;
-  font-family: Roboto, Helvetica, Arial, sans-serif;
-}
-
-.card:hover {
-  box-shadow: 0 0 8px #55f;
-}
-
 .information {
   background-color: white;
-  margin: 10px 10px;
+  margin: 10px 10px 0 10px;
   border-width: thin;
-  padding: 0px 10px;
+  padding: 10px 10px;
   font-size: 14px;
 }
 
 .interesting-fact {
+  margin: 0 0;
   font-style: italic;
 }
