--- a/styles.css
+++ b/styles.css
@@ -1,34 +1,28 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,400i,600");
 @import url("https://fonts.googleapis.com/css?family=Montserrat:900");
-html {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
 body {
-  margin: 0;
-  padding: 0 0 0 0;
   width: 100%;
   height: 100%;
+  margin: 0;
+  padding: 30px 0;
+  box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.3);
   min-height: 100%;
   background: center center/cover;
   background-color: #80bb70;
   background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/111167/grad-bg.png");
-  box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.3);
+  background-size: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
 
 .card {
   position: relative;
-  top: 15px;
   display: block;
-  margin: auto auto;
+  margin: 0 auto;
   padding: 0 0 10px 0;
   border-radius: 15px;
   width: 300px;
+  height: auto;
   background-color: white;
   box-shadow: 0 10px 20px rgba(0, 60, 0, 0.19), 0 6px 6px rgba(0, 60, 0, 0.23);
   transition: all 200ms ease-out;
@@ -69,7 +63,7 @@ ul {
 
 .information {
   background-color: white;
-  margin: 10px 10px 5px 10px;
+  margin: 0 10px;
   padding: 10px 10px;
   font-size: 14px;
   border: thin solid #ccc;
