--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,400i,600");
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,400i,700");
 @import url("https://fonts.googleapis.com/css?family=Montserrat:900");
 body {
   width: 100%;
@@ -34,13 +34,13 @@ body {
   box-shadow: 0 19px 38px rgba(0, 60, 0, 0.30), 0 15px 12px rgba(0, 60, 0, 0.22);
 }
 
-ul {
+.list {
   list-style-type: none;
   padding-left: 0;
 }
 
-.list span {
-  font-weight: bold;
+.bold {
+  font-weight: 700;
 }
 
 .header {
