--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,36 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,400i,700");
-@import url("https://fonts.googleapis.com/css?family=Montserrat:900");
-body {
-  width: 100%;
-  height: 100%;
+html, body {
+  width: 100vw;
+  height: 100vh;
   margin: 0;
-  padding: 30px 0;
+  padding: 0;
+}
+
+body {
   box-shadow: inset 0 0 100px rgba(0, 0, 0, 0.3);
-  min-height: 100%;
   background: center center/cover;
-  background-color: #80bb70;
+  background-color: rgb(128, 187, 112);
   background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/111167/grad-bg.png");
   background-size: 100%;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  
+	display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .card {
-  position: relative;
-  display: block;
-  margin: 0 auto;
-  padding: 0 0 10px 0;
-  border-radius: 15px;
-  width: 300px;
-  height: auto;
-  background-color: white;
-  box-shadow: 0 10px 20px rgba(0, 60, 0, 0.19), 0 6px 6px rgba(0, 60, 0, 0.23);
+  width: 302px;
+  padding: 10px;
+  border-radius: 20px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0 10px 20px rgba(0, 90, 30, 0.19), 0 6px 6px rgba(0, 90, 60, 0.23);
   transition: all 200ms ease-out;
   font-family: Roboto, Helvetica, Arial, sans-serif;
-  overflow: hidden;
 }
 
 .card:hover {
-  box-shadow: 0 19px 38px rgba(0, 60, 0, 0.30), 0 15px 12px rgba(0, 60, 0, 0.22);
+  box-shadow: 0 19px 38px rgba(0, 90, 30, 0.30), 0 15px 12px rgba(0, 90, 60, 0.22);
 }
 
 .list {
@@ -43,34 +42,47 @@ body {
   font-weight: 700;
 }
 
-.header {
+.title {
   position: absolute;
-  margin: auto auto;
+  margin: 0 auto;
   padding: 5px 0;
   text-align: center;
   width: 300px;
   text-transform: uppercase;
-  color: white;
+  color: rgb(255, 255, 255);
   background-color: rgba(0, 130, 0, 0.40);
   z-index: 1;
   font-family: "Montserrat", sans-serif;
+  font-size: 2rem;
+  border-bottom: 2px solid rgba(0, 130, 0, 0.40);
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
 
 .image {
-  width: 100%;
+  width: 300px;
+  margin-bottom: 10px;
   clip-path: polygon(0 0, 100% 0, 100% 90%, 50% 100%, 0% 90%);
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-bottom: none;
+  border-radius: 15px;
 }
 
 .information {
-  background-color: white;
-  margin: 0 10px;
+  background-color: rgb(255, 255, 255);
+  margin: 0 auto;
   padding: 10px 10px;
-  font-size: 14px;
-  border: thin solid #ccc;
+  border: 1px solid rgb(204, 204, 204);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
 }
 
 .interesting-fact {
   margin: 0 0;
   font-style: italic;
+}
+
+.description {
+  margin-bottom: 5px;
 }
